--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
   </head>
   <body>
     <div class="main">
-      <section class="head" id="head"></section>
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button>0</button>
-      <button>.</button>
-      <button>+</button>
-      <button>x</button>
-      <button>-</button>
-      <button>&equals;</button>
+      <section class="button-container">
+        <section class="head" id="head"></section>
+        <button class="seven" id="seven">7</button>
+        <button class="eight" id="eight">8</button>
+        <button class="nine" id="nine">9</button>
+        <button class="divide" id="divide">&#247;</button>
+        <button class="four" id="four">4</button>
+        <button class="five" id="five">5</button>
+        <button class="six" id="six">6</button>
+        <button class="multiply" id="multiply">x</button>
+        <button class="one" id="one">1</button>
+        <button class="two" id="two">2</button>
+        <button class="three" id="three">3</button>
+        <button class="substract" id="substract">-</button>
+        <button class="zero" id="zero">0</button>
+        <button class="point" id="point">.</button>
+        <button class="addition" id="addition">+</button>
+        <button class="equals" id="equals">&equals;</button>
+      </section>
     </div>
 
     <script src="script.js"></script>
