--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
       <div class="main">
         <div class="display">
           <p class="small-display"></p>
-          <p class="large-display">0</p>
+          <p
+            type="number"
+            class="large-display"
+            id="large-display"
+            disabled
+            maxlength="10"
+          ></p>
         </div>
         <div class="inputs">
           <button class="clear">C</button>
+          <button class="reset">del</button>
           <button id="divide" class="operators">&divide;</button>
 
           <button class="is-num">7</button>
